# sorting-algorithms

./: .clang-format  .gitignore  CMakeLists.txt  README.md  algorithms.hpp  sort.hpp  sort_benchmark.cpp  sort_test.cpp
benchmark/: sort_benchmark.cpp
cmake/: ConfigureProjectBenchmark.cmake  ConfigureProjectTests.cmake
include/sorting_algorithms/: sort.hpp
lib/catch2/: catch_amalgamated.cpp.asc  catch_amalgamated.hpp.asc
test/: sort_test.cpp
